Fix gradle warnings