@@ -31,9 +31,7 @@ tasks.test {
     // Use junit platform for unit tests.
     useJUnitPlatform()
     jvmArgs = listOf(
-        "-XX:+EnableDynamicAgentLoading",
         "-Xshare:off",
-        classpath.find { "mockito-core" in it.name }?.let { "-javaagent:${it.absolutePath}" } ?: "",
     )
 }
 
